--- a/Implementation/enginelog_dataset_preprocessing.ipynb
+++ b/Implementation/enginelog_dataset_preprocessing.ipynb
@@ -910,7 +910,7 @@
     "    train_dataset=processed_dataset[\"train\"],\n",
     ")\n",
     "\n",
-    "# Start training\n",
+    "# Start training the model\n",
     "trainer.train()"
    ]
   },
@@ -937,7 +937,7 @@
    },
    "outputs": [],
    "source": [
-    "# Save processor to Hugging face repo and create model card\n",
+    "# Save processor to Hugging face repo and create model card \n",
     "processor.save_pretrained(hf_repository_id)\n",
     "trainer.create_model_card()\n",
     "trainer.push_to_hub()"
